--- a/style.css
+++ b/style.css
@@ -437,6 +437,7 @@ a{
 	}
 	#inner_menu{
 		display: none;
+		box-shadow: 5px 5px 8px #888888;
 	}
 	#hamburger{
 		width: 30px;
@@ -816,11 +817,10 @@ iframe{
 	margin-top: 20px;
 	height: 50px;
 	width: 200px;
-	border-radius: 20px;
+	border-radius: 10px;
 	border: none;
 	font-family: Winter !important;
-	font-size: 20pt;
-	color: white;
+	font-size: 17pt;
 }
 #btn:hover{
 	opacity: 0.7;
