--- a/style.css
+++ b/style.css
@@ -345,7 +345,7 @@ a{
 		height: 70px;
 	}
 	#listMenu {
-		font-size: 0.7em;
+		font-size: 17pt;
 		line-height: 1.8;
 		color: #055464;
 		padding: 10px;
@@ -356,7 +356,7 @@ a{
 		list-style-type: none;
 	}
 	#captionText{
-		font-size: 1.5em;
+		font-size: 12pt;
 		margin-top: 30px;
 	}
 	#homepage{
@@ -497,7 +497,16 @@ a{
 	display: flex;
 	align-items: flex-start;
     justify-content: flex-end;
-}
+	}
+	#btn{
+	margin-top: 20px;
+	height: 50px;
+	width: 150px;
+	border-radius: 10px;
+	border: none;
+	font-family: Winter !important;
+	font-size: 12pt;
+	}
 }
 /*desktop*/
 @media only screen and (min-width: 813px) {
@@ -611,7 +620,7 @@ a{
 		background-repeat: no-repeat;
 		animation: opa 5s infinite alternate ;
 		transition: all .5s;
-		background-size: cover;
+		/*background-size: cover;*/
 	}
 	.obj-a2{
 		background-image: url(img/home/art.png);
@@ -619,7 +628,7 @@ a{
 		background-repeat: no-repeat;
 		animation: opa-a 1s;
 		transition: all .5s;
-		background-size: cover;
+		/*background-size: cover;*/
 	}
 	#divLogo{
 		/*padding-top: 20px;*/
@@ -632,7 +641,11 @@ a{
 	#hamburger{
 		display: none;
 	}
+	#listMenu {
+		font-size: 25pt;
+	}
 	#captionText{
+		font-size: 12pt;
 		margin-top: 30px;
 	}
 	#caption{
@@ -760,7 +773,7 @@ a{
 	margin-top: 5%;
 	color: white;
 	}
-	.a-footer{
+	/*.a-footer{
 	background: #099690;
 	text-align: center;
 	padding: 20px;
@@ -769,7 +782,16 @@ a{
 	bottom: 0%;
 	margin-top: 15%;
 	color: white;
-	}
+	}*/
+	#btn{
+	margin-top: 20px;
+	height: 50px;
+	width: 200px;
+	border-radius: 10px;
+	border: none;
+	font-family: Winter !important;
+	font-size: 15pt;
+}
 }
 
 /*--------------------------------------------------------*/
@@ -813,15 +835,6 @@ iframe{
 	animation: a-ani-page .3s;
 }
 
-#btn{
-	margin-top: 20px;
-	height: 50px;
-	width: 200px;
-	border-radius: 10px;
-	border: none;
-	font-family: Winter !important;
-	font-size: 17pt;
-}
 #btn:hover{
 	opacity: 0.7;
 	animation: obj-scl .3s infinite alternate;
