--- a/style.css
+++ b/style.css
@@ -414,6 +414,12 @@ a{
 		position: relative;
 		margin-bottom: 5%;
 	}
+	.h-content1{
+		padding: 20px;
+		top: 55px;
+		position: relative;
+		margin-bottom: 5%;
+	}
 
 	.h-innerContent{
 		padding-left: 20px;
