--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ a{
 	font-size: 1.3em;
 }
 
+*{
+	transition: all .3s;
+}
+
 @font-face {
 	font-family: Chonburi;
 	src: url(font/font/chonburi-regular.ttf);
@@ -154,6 +158,10 @@ a{
 
 .darkOrange{
 	color: #e65836;
+}
+
+.yellow{
+	color: #ffd795;
 }
 
 .lightGreen-b{
@@ -480,6 +488,7 @@ a{
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		text-align: center;
 	}
 	.a-content{
 		padding: 20px;
@@ -504,20 +513,37 @@ a{
 		margin-top: 55px;
 	}
 	.container{
-	width: 100%;
-	height: 100vh;
-	display: flex;
-	align-items: flex-start;
-    justify-content: flex-end;
+		width: 100%;
+		height: 100vh;
+		display: flex;
+		align-items: flex-start;
+		justify-content: flex-end;
 	}
 	#btn{
-	margin-top: 20px;
-	height: 50px;
-	width: 150px;
-	border-radius: 10px;
-	border: none;
-	font-family: Winter !important;
-	font-size: 12pt;
+		margin-top: 20px;
+		height: 50px;
+		width: 150px;
+		border-radius: 10px;
+		border: none;
+		font-family: Winter !important;
+		font-size: 12pt;
+		/*position: fixed;
+		z-index: 2;
+		right: 2em;
+		bottom: 2em;*/
+	}
+	.goTop{
+		position: fixed;
+		right: 2em;
+		bottom: 2em;
+		z-index: 1;
+	}
+	#caption{
+		padding-left: 60px;
+		padding-right: 60px;
+	}
+	.mobile-btn{
+		text-align: center;
 	}
 }
 /*desktop*/
@@ -662,7 +688,7 @@ a{
 		text-align: center;
 	}
 	#caption{
-		width: 70%;
+		width: 200px;
 	}
 	#homepage{
 		width: 100%;
@@ -682,7 +708,7 @@ a{
 		position: relative;
 	}
 	.h-menu{
-		width: 24%;
+		width: 290px;
 		height: 100vh;
 		padding: 30px;
 		position: fixed;
@@ -804,14 +830,19 @@ a{
 	color: white;
 	}*/
 	#btn{
-	margin-top: 20px;
-	height: 50px;
-	width: 200px;
-	border-radius: 10px;
-	border: none;
-	font-family: Winter !important;
-	font-size: 15pt;
-}
+		margin-top: 20px;
+		height: 75px;
+		width: 250px;
+		border-radius: 10px;
+		border: none;
+		font-family: Winter !important;
+		font-size: 15pt;
+		position: fixed;
+		right: 2em;
+		bottom: 2em;
+		box-shadow: 2px 5px 10px black;
+	}
+
 }
 
 /*--------------------------------------------------------*/
