--- a/style.css
+++ b/style.css
@@ -251,19 +251,16 @@ a{
 		background-size: 100%;
 		background-repeat: no-repeat;
 		animation: translate-x 5s;
-		/*background-size: cover;*/
 	}
 	.home-4{
 		background-image: url(img/home/women.png);
 		background-repeat: no-repeat;
 		background-size: 100%;
 		animation: rot 3s;
-		/*background-size: cover;*/
 	}
 	.home-5{
 		background-image: url(img/home/wave1.png);
 		background-repeat: no-repeat;
-		/*animation: rot 3s;*/
 	}
 
 	.obj-s{
@@ -382,19 +379,6 @@ a{
 		overflow: hidden;
 		position: absolute;
     	bottom: 0%;
-		/*display: flex;
-		align-self: flex-end;*/
-	}
-	/*#obj2, #obj3, #obj4{
-		position: absolute;
-		top: 0%;
-	}
-	#obj{
-		position: relative;
-	}	*/
-	#obj{
-		/*position: absolute;*/
-
 	}
 	#obj2{
 		position: absolute;
@@ -421,13 +405,11 @@ a{
 
 	.h-content{
 		padding: 20px;
-		top: 55px;
 		position: relative;
 		margin-bottom: 5%;
 	}
 	.h-content1{
 		padding: 20px;
-		top: 55px;
 		position: relative;
 		margin-bottom: 5%;
 	}
@@ -498,7 +480,7 @@ a{
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		padding-top: 85px;
+		/*padding-top: 85px;*/
 	}
 	.header{
 		font-size: 2.3em !important;
@@ -530,10 +512,6 @@ a{
 		border: none;
 		font-family: Winter !important;
 		font-size: 12pt;
-		/*position: fixed;
-		z-index: 2;
-		right: 2em;
-		bottom: 2em;*/
 	}
 	.goTop{
 		position: fixed;
@@ -548,9 +526,9 @@ a{
 	.mobile-btn{
 		text-align: center;
 	}
-	/*.media-1{
+	.media-1{
 		display: flex;
-		flex-direction: column-reverse;
+		flex-direction: column;
 		align-items: center;
 	}
 	.displayFlex{
@@ -561,7 +539,7 @@ a{
 	}
 	.order-2{
 		order: 2;
-	}*/
+	}
 	hr{
 		border: 0.2px solid gray;
 	}
@@ -686,10 +664,8 @@ a{
 		background-repeat: no-repeat;
 		animation: opa-a 1s;
 		transition: all .5s;
-		/*background-size: cover;*/
 	}
 	#divLogo{
-		/*padding-top: 20px;*/
 		padding-left: 20px;
 	}
 	#menuBar{
@@ -836,19 +812,8 @@ a{
 	background: #099690;
 	position: relative;
 	bottom: 0%;
-	/*margin-top: 12%;*/
 	color: white;
 	}
-	/*.a-footer{
-	background: #099690;
-	text-align: center;
-	padding: 20px;
-	box-sizing: border-box;
-	position: relative;
-	bottom: 0%;
-	margin-top: 15%;
-	color: white;
-	}*/
 	#btn{
 		margin-top: 20px;
 		height: 75px;
@@ -916,3 +881,6 @@ iframe{
 	line-height: 2;
 }
 
+.boat{
+	padding-top: 90px;
+}
