--- a/style.css
+++ b/style.css
@@ -707,6 +707,7 @@ a{
 		position: fixed;
 		margin-left: 30px;
 		box-sizing: border-box;
+		top: 0%;
 	}
 	#h-history{
 		left: 40px;
@@ -796,7 +797,6 @@ a{
     	position: relative;
     	margin-left: 25%;
     	height: 85vh;
-    	margin-top: 5%;
 	}
 	.s-content{
 		line-height: 2em;
