--- a/style.css
+++ b/style.css
@@ -714,7 +714,7 @@ a{
 		padding: 20px;
 		margin-left: 27%;
 		padding-top: 55px;
-		height: 100vh;
+		/*height: 100vh;*/
 	}
 	.m-1{
 		height: 120vh;	
